--- a/app/src/main/res/layout/activity_power.xml
+++ b/app/src/main/res/layout/activity_power.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".ui.power.PowerActivity">
-
+<LinearLayout
+    android:visibility="gone"
+    android:id="@+id/lay_lin"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <View
         android:id="@+id/v"
         android:visibility="gone"
@@ -88,3 +93,14 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
+
+
+    <ProgressBar
+        android:id="@+id/pg_power"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:layout_constraintBottom_toBottomOf="@+id/lay_lin"
+        app:layout_constraintEnd_toEndOf="@+id/lay_lin"
+        app:layout_constraintStart_toStartOf="@+id/lay_lin"
+        app:layout_constraintTop_toTopOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
