--- a/app/src/main/res/layout/include_system_info.xml
+++ b/app/src/main/res/layout/include_system_info.xml
@@ -177,7 +177,7 @@
             android:fontFamily="@font/segoeui_semibold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Host Name"
+            android:text="RAM Usage"
             />
         <LinearLayout
             android:layout_marginTop="8dp"
@@ -185,6 +185,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <ProgressBar
+                android:id="@+id/pg_info_pg"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:max="100"
@@ -192,14 +193,44 @@
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:textAlignment="textEnd"
-                    android:layout_height="wrap_content"
-                    android:text="6.8 GB"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="10dp"
-                    />
+            <TextView
+                android:id="@+id/ram"
+                android:layout_width="match_parent"
+                android:textAlignment="textEnd"
+                android:layout_height="wrap_content"
+                android:text="6.8 GB"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
+                />
+        </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+        <TextView
+            android:textSize="15dp"
+            android:fontFamily="@font/segoeui_semibold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CPU Usage"
+            />
+        <LinearLayout
+            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <ProgressBar
+                android:id="@+id/pg_info_pg_cpu"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:max="100"
+                android:progress="20"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
